--- a/website/src/pages/v3/comparison.mdx
+++ b/website/src/pages/v3/comparison.mdx
@@ -72,7 +72,7 @@ You can wire up `graphql-ws` or `graphql-sse` for adding either GraphQL over Web
 
 GraphQL Yoga has built-in support for [GraphQL Subscriptions over Server-Sent-Events (SSE)](/v3/features/subscriptions#subscriptions) without the need of any additional libraries.
 
-In addition GraphQL Yoga also support GraphQL Subscriptions over WS (via `graphql-ws`) and in addition to that.
+In addition GraphQL Yoga also support GraphQL Subscriptions over WS (via `graphql-ws`).
 
 Instead of GraphQL Subscriptions, Yoga users can also use GraphQL Live Queries.
 
