--- a/website/src/pages/v3/comparison.mdx
+++ b/website/src/pages/v3/comparison.mdx
@@ -74,7 +74,7 @@ GraphQL Yoga has built-in support for [GraphQL Subscriptions over Server-Sent-Ev
 
 In addition GraphQL Yoga also support GraphQL Subscriptions over WS (via `graphql-ws`).
 
-Instead of GraphQL Subscriptions, Yoga users can also use GraphQL Live Queries.
+In addition to GraphQL Subscriptions, Yoga users can also use GraphQL Live Queries.
 
 ### Bundle Size and Dependencies
 
@@ -85,12 +85,12 @@ GraphQL Yoga and Apollo server have relatively similar bundle sizes, where Apoll
 Here you can see a comparison of bundle sizes on Bundlephobia>
 
 - [Bundlephobia `graphql-yoga`](https://bundlephobia.com/package/graphql-yoga@three)
-- [Bundlephobia `apollo-server-micro`](https://bundlephobia.com/package/@apollo/server)
+- [Bundlephobia `@apollo/server`](https://bundlephobia.com/package/@apollo/server)
 
 GraphQL Yoga only has a fraction of the dependencies of Apollo Server, and in general is much smaller.
 
 - [Dependency visualizer `graphql-yoga`](https://npm.anvaka.com/#/view/2d/graphql-yoga)
-- [Dependency visualizer `@apollo/server`](https://npm.anvaka.com/#/view/2d/apollo-server-micro)
+- [Dependency visualizer `@apollo/server`](https://npm.anvaka.com/#/view/2d/@apollo/server)
 
 GraphQL Yogas APIs are designed for code-splitting and supported by popular bundlers.
 
