add side effects section

--- a/website/src/pages/v3/comparison.mdx
+++ b/website/src/pages/v3/comparison.mdx
@@ -92,7 +92,7 @@ GraphQL Yoga only has a fraction of the dependencies of Apollo Server, and in ge
 - [Dependency visualizer `graphql-yoga`](https://npm.anvaka.com/#/view/2d/graphql-yoga)
 - [Dependency visualizer `@apollo/server`](https://npm.anvaka.com/#/view/2d/@apollo/server)
 
-GraphQL Yogas APIs are designed for code-splitting and supported by popular bundlers.
+GraphQL Yogas APIs are designed for code-splitting and thus have no side effects, where Apollo server specifies that is has side effects and thus, cannot be code splitted.
 
 ### Better runtime performance
 
