Improve changesets and update package installation instructions

--- a/website/src/pages/v3/comparison.mdx
+++ b/website/src/pages/v3/comparison.mdx
@@ -84,7 +84,7 @@ GraphQL Yoga and Apollo server have relatively similar bundle sizes, where Apoll
 
 Here you can see a comparison of bundle sizes on Bundlephobia>
 
-- [Bundlephobia `graphql-yoga`](https://bundlephobia.com/package/graphql-yoga@three)
+- [Bundlephobia `graphql-yoga`](https://bundlephobia.com/package/graphql-yoga)
 - [Bundlephobia `@apollo/server`](https://bundlephobia.com/package/@apollo/server)
 
 GraphQL Yoga only has a fraction of the dependencies of Apollo Server, and in general is much smaller.
