--- a/website/src/pages/v3/features/apollo-federation.mdx
+++ b/website/src/pages/v3/features/apollo-federation.mdx
@@ -74,7 +74,7 @@ You don't need any extra plugins for Yoga for Federation Service.
 
 ### Installation
 
-<PackageCmd packages={['graphql-yoga@three', '@apollo/subgraph', 'graphql']} />
+<PackageCmd packages={['graphql-yoga', '@apollo/subgraph', 'graphql']} />
 
 ### Example User Service
 
@@ -128,8 +128,8 @@ You'll need the `@graphql-yoga/plugin-apollo-inline-trace` Yoga plugin for this.
 
 <PackageCmd
   packages={[
-    'graphql-yoga@three',
-    '@graphql-yoga/plugin-apollo-inline-trace@three',
+    'graphql-yoga',
+    '@graphql-yoga/plugin-apollo-inline-trace',
     'graphql'
   ]}
 />
