--- a/website/src/pages/v3/index.mdx
+++ b/website/src/pages/v3/index.mdx
@@ -6,7 +6,7 @@ GraphQL Yoga is a batteries-included cross-platform [GraphQL over HTTP spec-comp
 
 ## Installation
 
-<PackageCmd packages={['graphql graphql-yoga@three']} />
+<PackageCmd packages={['graphql graphql-yoga']} />
 
 ## Schema
 
