--- a/website/src/pages/v3/integrations/integration-with-bun.mdx
+++ b/website/src/pages/v3/integrations/integration-with-bun.mdx
@@ -8,7 +8,7 @@ So the configuration is really simple like any other JS runtime with Yoga;
 
 ## Installation
 
-<PackageCmd packages={['graphql', 'graphql-yoga@three']} />
+<PackageCmd packages={['graphql', 'graphql-yoga']} />
 
 ## Usage
 
