--- a/website/src/pages/v3/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/src/pages/v3/integrations/integration-with-cloudflare-workers.mdx
@@ -17,7 +17,7 @@ You will want to use the package `graphql-yoga` which has an agnostic HTTP handl
 
 ## Installation
 
-<PackageCmd packages={['graphql', 'graphql-yoga@three']} />
+<PackageCmd packages={['graphql', 'graphql-yoga']} />
 
 ## Example with regular `fetch` event listener
 
