--- a/website/src/pages/v3/integrations/integration-with-deno.mdx
+++ b/website/src/pages/v3/integrations/integration-with-deno.mdx
@@ -12,7 +12,7 @@ Create a `deno-yoga.ts` file:
 import {
   createYoga,
   createSchema
-} from 'https://cdn.skypack.dev/graphql-yoga@three?dts'
+} from 'https://cdn.skypack.dev/graphql-yoga?dts'
 import { serve } from 'https://deno.land/std@0.157.0/http/server.ts'
 
 const yoga = createYoga({
