--- a/website/src/pages/v3/integrations/integration-with-express.mdx
+++ b/website/src/pages/v3/integrations/integration-with-express.mdx
@@ -7,7 +7,7 @@ You can easily integrate GraphQL Yoga into your Express application with a few l
 
 ## Installation
 
-<PackageCmd packages={['express', 'graphql', 'graphql-yoga@three']} />
+<PackageCmd packages={['express', 'graphql', 'graphql-yoga']} />
 
 ## Example
 
