--- a/website/src/pages/v3/migration/migration-from-yoga-v1.mdx
+++ b/website/src/pages/v3/migration/migration-from-yoga-v1.mdx
@@ -6,7 +6,7 @@ import { PackageCmd } from '@theguild/components'
 
 You can start with updating `graphql-yoga` package.
 
-<PackageCmd packages={['graphql-yoga@three']} />
+<PackageCmd packages={['graphql-yoga']} />
 
 ## Server setup
 
