--- a/website/src/pages/v3/migration/migration-from-yoga-v2.mdx
+++ b/website/src/pages/v3/migration/migration-from-yoga-v2.mdx
@@ -7,7 +7,7 @@ import { PackageCmd } from '@theguild/components'
 Now GraphQL Yoga has a single NPM package for all environments `graphql-yoga` instead of `@graphql-yoga/common` and `@graphql-yoga/node`.
 So you need to uninstall `@graphql-yoga/common` and `@graphql-yoga/node` then install `graphql-yoga` from NPM.
 
-<PackageCmd packages={['graphql-yoga@three']} />
+<PackageCmd packages={['graphql-yoga']} />
 
 ## `createServer` renamed to `createYoga`
 
