--- a/website/src/pages/v3/integrations/integration-with-aws-lambda.mdx
+++ b/website/src/pages/v3/integrations/integration-with-aws-lambda.mdx
@@ -6,7 +6,7 @@ AWS Lambda is a serverless computing platform that makes it easy to build applic
 
 ## Installation
 
-<PackageCmd packages={['graphql', 'aws-lambda', 'graphql-yoga@three']} />
+<PackageCmd packages={['graphql', 'aws-lambda', 'graphql-yoga']} />
 
 ## Example
 
