--- a/website/src/pages/v3/integrations/integration-with-koa.mdx
+++ b/website/src/pages/v3/integrations/integration-with-koa.mdx
@@ -7,7 +7,7 @@ GraphQL Yoga can be integrated easily as a route to the existing Koa application
 
 ## Installation
 
-<PackageCmd packages={['koa', 'graphql', 'graphql-yoga@three']} />
+<PackageCmd packages={['koa', 'graphql', 'graphql-yoga']} />
 
 ## Example
 
