--- a/website/src/pages/v3/migration/migration-from-apollo-server.mdx
+++ b/website/src/pages/v3/migration/migration-from-apollo-server.mdx
@@ -6,7 +6,7 @@ import { PackageCmd } from '@theguild/components'
 
 You can start with installing `graphql-yoga` package.
 
-<PackageCmd packages={['graphql-yoga@three']} />
+<PackageCmd packages={['graphql-yoga']} />
 
 ### Install equivalent **Envelop** plugins of the Apollo Server
 
